@@ -1,5 +1,5 @@
+# Copyright: 2005-2009 Brian Harring <ferringb@gmail.com>: BSD/GPL2
 # Copyright: 2005-2006 Marien Zwart <marienz@gentoo.org>
-# Copyright: 2005-2006 Brian Harring <ferringb@gmail.com>: BSD/GPL2
 # License: GPL2
 
 """Collapse multiple config-sources and instantiate from them.
